--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ function onWatchSuccess(position)
 		<div id='mainw' style='position:absolute; left:0px; top:0px; width:600px; height:600px; ' >
 			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; ' >
 
-				<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFY47FE__z9AvRLBoYG0T2XeOTiHdwzOQ&callback=initMap"></script>
+				<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFY47FE__z9AvRLBoYG0T2XeOTiHdwzOQ"></script>
 
 				<div id='users' style='position:absolute; left:0px; top:0px;  z-index:101; '>
 					<div id='homepos' style='position:absolute; left:0px; top:0px;  background-color:green; width:7px; height:7px; z-index:102;'><img src='pin.svg' style='position:absolute; left:-15px; top:-17px; width:30px; height:35px;'></div>
