--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ function onWatchSuccess(position)
 
 
 
-			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; ' >
+			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; display:none;' >
 
 				
 
