--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@ var MyLong;
 
 		<div id='mainw' style='position:absolute; left:0px; top:0px; width:600px; height:600px; ' >
 
-<div id="mymap" style=' height:800px; width:400px; ' ></div>
+<div id="mymap" style='position:absolute; left:5px; top:5x; height:750px; width:420px; ' ></div>
 
 			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; display:none;' >
 
