--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ var MyLong;
 		
         var myLatLng = {lat: MyLat, lng: MyLong};
 
-		MyMap = new google.maps.Map(document.getElementById('mymap'), {
+		gmap = new google.maps.Map(document.getElementById('gmap'), {
           zoom: 18,
           center: myLatLng,
 			  zIndex:70,
@@ -587,7 +587,7 @@ var MyLong;
 
 		<div id='mainw' style='position:absolute; left:0px; top:0px; width:600px; height:600px; ' >
 
-<div id="mymap" style='position:absolute; left:25px; top:25x; height:750px; width:420px; display:block;' ></div>
+<div id="gmap" style='position:absolute; left:25px; top:50px; height:600px; width:365px; display:block;' ></div>
 
 			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; display:none;' >
 
