--- a/index.html
+++ b/index.html
@@ -569,13 +569,17 @@ var MyLong;
           zoom: 18,
           center: myLatLng,
 			  zIndex:70,
-			    mapTypeId: 'satellite'
+			  
+				disableDefaultUI: true
+
 
         });
 		
 
 
       }
+
+	 //  mapTypeId: 'satellite',
 
 </script>
 
