--- a/index.html
+++ b/index.html
@@ -560,8 +560,8 @@ var MyLat;
 var MyLong;
  function initMap() {
 			
-		MyLat=41.718287;
-		MyLong=44.778728;
+	//	MyLat=41.718287;
+	//	MyLong=44.778728;
 		
         var myLatLng = {lat: MyLat, lng: MyLong};
 
@@ -575,9 +575,31 @@ var MyLong;
 
         });
 		
+		var myicon = {
+		     url: "pin.svg", // url
+		     scaledSize: new google.maps.Size(50, 50), // size
+		     origin: new google.maps.Point(0,0), // origin
+		     anchor: new google.maps.Point(25, 25), // anchor 
+			 ratation:30
+			 };
+
+		var caricon = {
+		     url: "car.svg", // url
+		     scaledSize: new google.maps.Size(50, 50), // size
+		     origin: new google.maps.Point(0,0), // origin
+		     anchor: new google.maps.Point(25, 25), // anchor 
+
+			 };
 
 
-      }
+	MyMarker = new google.maps.Marker({
+			  position: myLatLng,
+			  map: MyMap,
+				  	icon:micon
+
+			});
+
+	  }
 
 	 //  mapTypeId: 'satellite',
 
