--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<meta http-equiv="Content-Security-Policy" content="img-src * 'self' data:; default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://maps.googleapis.com">
+<meta http-equiv="Content-Security-Policy" content="img-src * 'self' data:; default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://maps.googleapis.com https://fonts.googleapis.com">
 
 
 <meta name="viewport"   content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -595,7 +595,7 @@ var MyLong;
 	MyMarker = new google.maps.Marker({
 			  position: myLatLng,
 			  map: gmap,
-				  	icon:micon
+				  	icon:myicon
 
 			});
 
