--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@ function onSearchDown()
 
 function onVolumeDown()
 	{
-	zoomme(-1);
+	//zoomme(-1);
 	}
 
 function onVolumeUp()
 	{
-	zoomme(1);
+	//zoomme(1);
 	}
 
 var dataex=0;
@@ -961,22 +961,15 @@ function DrawUsers()
 
 	if (mystatus==2)
 		{
-		var x=long2pixel(taxilong, MyZoom);
-		var y=lat2pixel(taxilat, MyZoom);
-
+		
 		console.log("draw taxi: "+taxilong+ " / "+taxilat+ " onme:"+myself);
 
-		var difx=Math.floor((x-xtile)*256);
-		var dify=Math.floor((y-ytile)*256);
-		difx=(256*(myw-1)/2)+difx-128;
-		dify=(256*(myh-1)/2)+dify-128;
-		
 		document.getElementById("taxibox").style.left=difx+"px";
 		document.getElementById("taxibox").style.top=dify+"px";
 		document.getElementById("taxibox").style.visibility="visible";
 		document.getElementById("taxitext").innerHTML=taxiname;
 
-		console.log("draw taxi: "+difx+ " / "+dify+" taxiname: "+taxiname);
+
 		}
 	}
 
@@ -985,13 +978,7 @@ function DrawUsers()
 function DrawHomePos()
 	{
 	console.log("drawing home pos");
-	var x=long2pixel(MyLong, MyZoom);
-	var y=lat2pixel(MyLat, MyZoom);
 
-	var difx=Math.floor((x-xtile)*256);
-	var dify=Math.floor((y-ytile)*256);
-	difx=(256*(myw-1)/2)+difx-128;
-	dify=(256*(myh-1)/2)+dify-128;
 	
 	document.getElementById("homepos").style.left=(difx-2)+"px";
 	document.getElementById("homepos").style.top=(dify-2)+"px";
@@ -1011,46 +998,8 @@ var tdist_old=0;
 function mdown(event)
 	{
 
-	omousex=parseInt(event.touches[0].pageX); 
-	omousey=parseInt(event.touches[0].pageY);
-	console.log(event.touches.length+"mouse down: "+omousex+ " - "+omousey);
-	if (event.touches.length>1)
-		{
-		t2x=parseInt(event.touches[1].pageX);
-		t2y=parseInt(event.touches[1].pageY);
-		tdist_old=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
-		tdist=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
-		tdist_old=parseInt(tdist_old);
-		tdist=parseInt(tdist);
-		console.log(" dva: "+t2x+ " - "+t2y);
-		console.log(" tdist: "+tdist_old +" - " +tdist );
-		}
-
-
-	finx=0; sfiny=0;
-	but1=1;
-
-//	document.getElementById("mainb").innerHTML="X: "+omousex+" Y: "+omousey;
 	}
 
-var biji = new Array();
-biji[2]=2;
-biji[3]=7;
-biji[4]=12;
-biji[5]=25;
-biji[6]=45;
-biji[7]=90;
-biji[8]=200;
-biji[9]=360;
-biji[10]=700;
-biji[11]=1400;
-biji[12]=2900;
-biji[13]=5800;
-biji[14]=11500;
-biji[15]=23500;
-biji[16]=46500;
-biji[17]=93000;
-biji[18]=190000;
 
 var sfinx=0;
 var finy=0;
@@ -1059,88 +1008,15 @@ function getmousecoord(event)
 	{
 	console.log("get mouse coord movedi");
 	
-	if (event.targetTouches.length>1)
-		{
-		t2x=parseInt(event.targetTouches[1].pageX);
-		t2y=parseInt(event.targetTouches[1].pageY);
-		mousex=parseInt(event.targetTouches[0].pageX); 
-		mousey=parseInt(event.targetTouches[0].pageY);
-		console.log("get mouse coord on move: "+mousex+" - "+mousey);
-		console.log("get mouse dva on move: "+t2x+" - "+t2y);
-		tdist=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
-
-		if (tdist-tdist_old>25)
-			{
-			zoomme(1);
-			tdist_old=tdist;
-			}
-		else if (tdist-tdist_old<-25)
-			{
-			zoomme(-1);
-			tdist_old=tdist;
-			}
-
-		tdist=parseInt(tdist);
-		console.log(" tdist on move: "+tdist_old +" - " +tdist );
-		
-		}
-	else
-		{
-		if (but1==1)
-			{
-			
-			
-			mousex=event.touches[0].pageX; 
-			mousey=event.touches[0].pageY;
-		
-			console.log("get mouse coord: "+mousex+" - "+mousey);
-
-			wlon=wlon+((omousex-mousex)/biji[MyZoom]);
-			wlat=wlat-((omousey-mousey)/(biji[MyZoom]*1.3));
-			omousex=mousex;
-			omousey=mousey;
-
-			//
-			setmypos();
-			DrawUsers();
-				
-			}
-		}
 	}
 
 function mup(event)
 	{
 	console.log("mouse up");
 
-	if (event.touches.length>1)
-		{
-		t2x=parseInt(event.touches[1].pageX);
-		t2y=parseInt(event.touches[1].pageY);
-		tdist_old=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
-		tdist=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
-		tdist_old=parseInt(tdist_old);
-		tdist=parseInt(tdist);
-		console.log(" dva on up: "+t2x+ " - "+t2y);
-		console.log(" tdist on up: "+tdist_old +" - " +tdist );
-		}
-	but1=0;
-	sfinx=0; sfiny=0;
-	check_user_click();
-	t2x=0; t2y=0;
-	tdist=0;
-	tdist_old=0;
-	//document.getElementById("mainb").innerHTML="Up";
 	}
 
 
-var myw=Math.floor(sx/256)+2;
-var myh=Math.floor(sy/256)+2;
-
-if (myw/2==Math.floor(myw/2))
-	{myw++;}
-
-if (myh/2==Math.floor(myh/2))
-	{myh++;}
 document.ontouchmove = function (e) {  console.log("object: "+e.target.id);};
 
 
@@ -1151,39 +1027,9 @@ document.getElementById("fanjara").style.height=sy+"px";
 //document.getElementById("mouser").style.height=sy+"px";
 
 
-var mywpx=(myw-1)*256;
-var myhpx=(myh-1)*256;
-
-document.getElementById("mainw").style.width=mywpx+"px";
-document.getElementById("mainw").style.height=myhpx+"px";
-console.log(" x: "+mywpx+ " Y: "+myhpx);
-document.getElementById("map").style.width=mywpx+"px";
-document.getElementById("map").style.height=myhpx+"px";
-document.getElementById("mainw").style.left=(-(mywpx-(sx))/2)+"px";
-document.getElementById("mainw").style.top=(-(myhpx-(sy))/2)+"px";
-
-canacX=(-(mywpx-(sx))/2);
-canacY=(-(myhpx-(sy))/2);
-
-console.log(" x: "+(-(mywpx-(sx))/2)+ " Y: "+(-(myhpx-(sy))/2));
-//document.getElementById("mainb").style.left=((sx-200)/2)+"px";
-
-
 function zoomme(sait)
 	{
-		console.log("zoome "+sait)
-	var cant=0;
-	if (sait>0 && MyZoom==18)
-		{cant=1;}
-	else if (sait<0 && MyZoom==2)
-		{cant=1;}
-	if (cant==0)
-		{	
-		MyZoom=Math.floor(MyZoom)+sait;
-	//	document.getElementById("mainb").innerHTML="Zoom: "+MyZoom;
-		setmypos();
-		DrawUsers();
-		}
+	
 	}
 
 var myloginid=0;
@@ -1216,20 +1062,6 @@ function saveuser()
 
 var curx;
 var cury;
-var mymap=document.getElementById("map");
-//mymap.innerHTML="";
-//mymap.innerHTML+="<div id='users' style='position:absolute; left:0px; top:0px; border:1px solid red; z-index:101;'><div id='homepos' style='position:absolute; left:0px; top:0px; border:1px solid red; background-color:green; width:7px; height:7px; z-index:99;'></div></div>";
-
-for (i=0;i<myw ; i++)
-	{
-	curx=i-(myw-1)/2;
-	for (ii=0;ii<myh ;ii++ )
-		{
-		cury=ii-(myh-1)/2;
-		mymap.innerHTML+="<img id='img_"+i+"-"+ii+"' style='position:absolute; left:"+(i*256-128)+"px; top:"+(ii*256-128)+"px; width:256px; height:256px;'>";
-		}
-	}
-//mymap.innerHTML+="				<div style='position:absolute; background-color:red; width:5px; height:5px; left:300px; top:300px;'></div>";
 var oxt=0;
 var oyt=0;
 var tilef=0;
@@ -1247,80 +1079,20 @@ function setmypos()
 		{
 		document.getElementById("myint").style.display="none";
 		}
-	console.log("set my pos, zoom: "+MyZoom);
 
-	if (MyZoom>18 || MyZoom<1)
-		{
-			MyZoom=17;
-		}
 
-	var lon_deg=wlon; 
-	var lat_deg=wlat; 
 
-	xtile=long2tile(lon_deg, MyZoom);
-	ytile=lat2tile(lat_deg, MyZoom);
-
-	var x=long2pixel(lon_deg, MyZoom);
-	var y=lat2pixel(lat_deg, MyZoom);
-	
-	var difx=128-(x-xtile)*256;
-	var dify=128-(y-ytile)*256;
-	kartX=difx;
-	kartY=dify;
-
-	console.log("mypos: "+lon_deg+" / "+lat_deg+ " = "+difx+" / "+dify);
-
-	document.getElementById("map").style.left=difx+"px";
-	document.getElementById("map").style.top=dify+"px";
-
-	if (xtile!=oxt || oyt!=ytile)
-		{
-		oxt=xtile;
-		oyt=ytile;
-		cur_down_i=0;
-		cur_down_ii=-1;
-		down_complete=1;
-		check_complete=1;
-		file_downing=1;
-		LT_finished=0;
-		loadtiles();	
-		DrawHomePos();
-		}
+	DrawHomePos();
 
 	var myLatLng = {lat:  MyLat, lng: MyLong};
 	MyMarker.setPosition(myLatLng);
-//	if (selobj<0)
-//		{
-		gmap.panTo(myLatLng);
-//		}
+	gmap.panTo(myLatLng);
 	console.log("move marker");
-
-	
-	
-//	document.getElementById("infodiv").innerHTML=wlon+ " / "+wlat;
 	}
 
 function check_user_click()
 	{
-//	console.log("checking user click");
-//	console.log((omousex-canacX-kartX) + " and " + (omousey-canacY-kartY));
-return;
-	for (i=0;i<userids.length ;i++ )
-		{
-		curid=userids[i];
 
-		var x=long2pixel(userlongs[i], MyZoom);
-		var y=lat2pixel(userlats[i], MyZoom);
-	
-		var difx=Math.floor((x-xtile)*256);
-		var dify=Math.floor((y-ytile)*256);
-		difx=(256*(myw-1)/2)+difx-128;
-		dify=(256*(myh-1)/2)+dify-128;
-		if ( (difx-16)<(omousex-canacX-kartX) && (omousex-canacX-kartX)<(difx+16) &&  (dify-16)<(omousey-canacY-kartY) && (omousey-canacY-kartY)<(dify+16) )
-			{
-			show_profile(i);
-			}
-		}
 	}
 
 function hide_profile()
@@ -1366,115 +1138,6 @@ function call_taxi()
 		}
 	}
 
-function loadtiles()
-	{
-	if (down_complete==1 && check_complete==1)
-		{
-		var A;
-
-		if (cur_down_ii>=(myh-1))
-			{
-			cur_down_ii=-1; cur_down_i++;
-			}
-
-		curx=cur_down_i-(myw-1)/2;
-	
-		if (cur_down_i<myw)
-			{
-			cur_down_ii++;
-			
-			cury=cur_down_ii-(myh-1)/2;
-		//	alert("checking: "+curmap+"_"+MyZoom+"_"+(xtile+curx)+"_"+(ytile+cury)+".png");
-			
-			A=(xtile+curx);	if (A<0) {A=0;}
-			mytile=curmap+"/"+MyZoom+"_"+A+"_"+(ytile+cury)+".png";
-
-			tilef=-1;
-			check_complete=0;down_complete=0;
-			checktile3(mytile);
-
-			}
-		else
-			{
-			// cikli dasrulda
-			LT_finished=1;
-			console.log("-------- dasrulda ----------");
-
-			
-			DrawHomePos();
-			}
-		}
-	else if (check_complete==1)
-		{
-		curx=cur_down_i-(myw-1)/2; cury=cur_down_ii-(myh-1)/2;
-		A=(xtile+curx);	if (A<0) {A=0;}
-		mytile=curmap+"/"+MyZoom+"_"+A+"_"+(ytile+cury)+".png";
-
-		//if (tilef==0 || cache_ignore==1 || (cache_ignore_wifi==1 && inter=="Wifi"))
-//			{
-		//	if (file_downing==1)
-		//		{
-				file_downing=0;
-				downtile(curmap, MyZoom, (xtile+curx), (ytile+cury), cur_down_i, cur_down_ii,1);
-				down_complete=1;
-				file_downing=1;
-		//		}
-//			}
-//		else
-//			{
-//			document.getElementById("img_"+cur_down_i+"-"+cur_down_ii).src="file:///storage/emulated/0/mytaxi/maps/"+mytile;
-//			document.getElementById("img_"+cur_down_i+"-"+cur_down_ii).alt=mytile;
-//			down_complete=1;
-//			file_downing=1;
-			
-//			DrawHomePos();
-//			}
-		}
-		
-	if (LT_finished==0)
-		{
-		setTimeout("loadtiles();",10);
-		}
-
-	}
-
-
-function downtile(smap, szoom, A, B, i, ii, retry)
-	{
-	if (A<0)
-		{A=0;}
-	if (B<0)
-		{B=0;}
-
-	if (smap==1)
-		{tilelink="http://tile.openstreetmap.org/"+szoom+"/"+A+"/"+B+".png";			}
-	else if (smap==2)
-		{tilelink="http://tile.opencyclemap.org/cycle/"+szoom+"/"+A+"/"+B+".png";			}
-	else if (smap==3)
-		{tilelink="http://mt3.google.com/vt/lyrs=s&x="+A+"&y="+B+"&z="+szoom;}
-	else if (smap==4)
-		{tilelink="http://mt3.google.com/vt/lyrs=p&x="+A+"&y="+B+"&z="+szoom;}
-	else if (smap==5)
-		{tilelink="http://mt3.google.com/vt/lyrs=t&x="+A+"&y="+B+"&z="+szoom;}
-	else if (smap==6)
-		{tilelink="http://mt3.google.com/vt/lyrs=h&x="+A+"&y="+B+"&z="+szoom;}
-	else if (smap==7)
-		{tilelink="http://mt3.google.com/vt/lyrs=r&x="+A+"&y="+B+"&z="+szoom;}
-	else if (smap==8)
-		{
-		s=A%4+(B%4)*4;
-		tilelink="http://i"+s+".wikimapia.org/?x="+A+"&y="+B+"&zoom="+szoom+"&m=h";
-		}
-	else if (smap==9)
-		{tilelink="http://tile.stamen.com/watercolor/"+szoom+"/"+A+"/"+B+".png";			}
-	else if (smap==10)
-		{tilelink="http://tile.stamen.com/toner/"+szoom+"/"+A+"/"+B+".png";			}	
-	tilename=smap+"/"+szoom+"_"+A+"_"+B+".png";
-
-	document.getElementById("img_"+i+"-"+ii).src=tilelink;
-	console.log("down tile: "+tilelink);
-
-	}
 
 function logout()
 {
@@ -1491,8 +1154,5 @@ WriteData();
 	{
     console.log(error.code);
     }
-//document.ontouchmove = function (e) {  console.log("object: "+e.target.id);};
-//document.ontouchmove = function(e) {getmousecoord(e);};
-//document.body.addEventListener('touchmove', function(event) {  event.preventDefault();}, false); 
 </script></body>
 </html>
