--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ var MyLong;
 		</div>
 	</div>
 
-	<a id='call_but'  style='position:fixed; bottom:40px; left:80px; height:100px; width:210px; z-index:252;  ' href='Javascript: call_taxi();'><img src='gamodzaxeba.svg' style='width:210px; height:100px;'></a>
+	<a id='call_but'  style='position:fixed; bottom:70px; left:80px; height:100px; width:210px; z-index:252;  ' href='Javascript: call_taxi();'><img src='gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
 
 	
@@ -670,9 +670,16 @@ var MyLong;
 
 
 
-		<div id="bottom_menu" style=' width:100%; position:fixed; bottom:0px; left:0px; height:60px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;   ' >
+		<div id="bottom_menu" style=' width:100%; position:fixed; bottom:0px; left:0px; height:900px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;   ' >
 			<img src='phone.png'>
 			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
+
+			<div id='certilebi' name='certilebi' style=' position:fixed; bottom:0px; left:0px; width:100%; background-color:#ffce00;'>
+			<table>
+			<Tr></td><input type='radio' id='certil_1' name='certili' value='1' onchange='change_certil();'> დაწყება: </td><Td><input type='radio' name='startp' id='startp_1' onchange='change_start();'> მიმდიანრე ლოკაცია | <input type='radio' name='startp' id='startp_1' onchange='change_start();'> მითითება რუკაზე</td></tr>
+			
+			
+			</div>
 		</div>
 
 	</div>
