--- a/index.html
+++ b/index.html
@@ -604,7 +604,10 @@ var MyLong;
 	 //  mapTypeId: 'satellite',
 
 </script>
+<style>
 
+td {font-size:10px;}
+</style>
 
 	<div id='charcho' style='position:fixed; left:0px; top:50px; width:365px; height:600px;  z-index:1;' >
 		<div id='mainw' style='position:absolute; left:0px; top:0px; width:600px; height:600px; ' >
@@ -675,8 +678,8 @@ var MyLong;
 			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
 
 			<div id='certilebi' name='certilebi' style=' position:fixed; bottom:0px; left:0px; width:100%; background-color:#ffce00;'>
-			<table>
-			<Tr></td><input type='radio' id='certil_1' name='certili' value='1' onchange='change_certil();'> დაწყება: </td><Td>
+			<table width=100% border=1>
+			<Tr><td><input type='radio' id='certil_1' name='certili' value='1' onchange='change_certil();'> დაწყება: </td><Td>
 				<input type='radio' name='startp' id='startp_1' onchange='change_start();'> მიმდიანრე ლოკაცია<Br> <input type='radio' name='startp' id='startp_1' onchange='change_start();'> მითითება რუკაზე</td></tr>
 			</table>
 			
