--- a/index.html
+++ b/index.html
@@ -679,9 +679,13 @@ td {font-size:10px;}
 
 			<div id='certilebi' name='certilebi' style=' position:fixed; bottom:0px; left:0px; width:100%; background-color:#ffce00;'>
 			<table width=100% border=1>
-			<Tr><td><input type='radio' id='certil_1' name='certili' value='1' onchange='change_certil();'> დაწყება: </td><Td>
-				<input type='radio' name='startp' id='startp_1' onchange='change_start();'> მიმდიანრე ლოკაცია<Br> <input type='radio' name='startp' id='startp_1' onchange='change_start();'> მითითება რუკაზე</td></tr>
+			<Tr><td>დაწყება: </td><Td>
+				<input type='radio' name='startp' id='startp_1' onchange='change_start();' checked> მიმდიანრე ლოკაცია<Br> <input type='radio' name='startp' id='startp_1' onchange='change_start();'> მითითება რუკაზე</td></tr>
+			<Tr><td>დასრულება: </td><Td>
+				<input type='radio' name='endp' id='endp_1' onchange='change_start();' checked> ღია<Br> <input type='radio' name='endp' id='endp_1' onchange='change_start();'> მითითება რუკაზე</td></tr>
+
 			</table>
+
 			
 			
 			</div>
