--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ td {font-size:10px;}
 		</div>
 	</div>
 
-	<a id='call_but'  style='position:fixed; bottom:70px; left:80px; height:100px; width:210px; z-index:252;  ' href='Javascript: call_taxi();'><img src='gamodzaxeba.svg' style='width:210px; height:100px;'></a>
+	<a id='call_but'  style='position:fixed; bottom:60px; left:80px; height:100px; width:210px; z-index:252;  ' href='Javascript: call_taxi();'><img src='gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
 
 	
@@ -678,7 +678,7 @@ td {font-size:10px;}
 			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
 
 			<div id='certilebi' name='certilebi' style=' position:fixed; bottom:0px; left:0px; width:100%; background-color:#ffce00;'>
-			<table width=100% border=1>
+			<table width=100% >
 			<Tr><td>დაწყება: </td><Td>
 				<input type='radio' name='startp' id='startp_1' onchange='change_start();' checked> მიმდიანრე ლოკაცია &nbsp;&nbsp; <input type='radio' name='startp' id='startp_1' onchange='change_start();'> მითითება რუკაზე</td></tr>
 			<Tr><td>დასრულება: </td><Td>
