--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
       // ------------------------
 
 
-      function onError() {
+      function onError(e) {
+          console.log(e);
 
 //        MyLat=position.coords.latitude ;
 //        MyLong=position.coords.longitude ;
