moved script files into a separate folder. changed readData from using files to using cookies.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Prius Taxi</title>
 
-  <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-  <script type="text/javascript" charset="utf-8" src="io.js"></script>
-  <script type="text/javascript" charset="utf-8" src="func.js"></script>
+  <script type="text/javascript" charset="utf-8" src="js/cordova.js"></script>
+  <script type="text/javascript" charset="utf-8" src="js/io.js"></script>
+  <script type="text/javascript" charset="utf-8" src="js/func.js"></script>
 
 
-  <script type="text/javascript" charset="utf-8" src="init.js"></script>
+  <script type="text/javascript" charset="utf-8" src="js/init.js"></script>
 </head>
 <style>
   body {
