--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Prius Taxi</title>
 
-  <script type="text/javascript" charset="utf-8" src="/js/cordova.js"></script>
-  <script type="text/javascript" charset="utf-8" src="/js/io.js"></script>
-  <script type="text/javascript" charset="utf-8" src="/js/func.js"></script>
+  <script type="text/javascript" charset="utf-8" src="~/js/cordova.js"></script>
+  <script type="text/javascript" charset="utf-8" src="~/js/io.js"></script>
+  <script type="text/javascript" charset="utf-8" src="~/js/func.js"></script>
 
 
   <script type="text/javascript" charset="utf-8" src="js/init.js"></script>
