--- a/www/index.html
+++ b/www/index.html
@@ -53,57 +53,7 @@
   <!--<div id='mouser' name='mouser' style='position:fixed; left:0px; top:50px; width:355px; height:500px; z-index:250; display:none;' ontouchstart="mdown(event);" ontouchend="mup(event);"  ontouchmove="getmousecoord(event);" ></div>-->
 
 
-  <script>
-
-      var MyLat;
-      var MyLong;
-
-      function initMap() {
-
-          MyLat = 41.718287;
-          MyLong = 44.778728;
-
-          var myLatLng = {lat: MyLat, lng: MyLong};
-
-          gmap = new google.maps.Map(document.getElementById('gmap'), {
-              zoom: 18,
-              center: myLatLng,
-              zIndex: 70,
-
-              disableDefaultUI: true
-
-
-          });
-
-          var myicon = {
-              url: "pin.svg", // url
-              scaledSize: new google.maps.Size(30, 36), // size
-              origin: new google.maps.Point(0, 0), // origin
-              anchor: new google.maps.Point(15, 18), // anchor
-              ratation: 30
-          };
-
-          var caricon = {
-              url: "car.svg", // url
-              scaledSize: new google.maps.Size(50, 50), // size
-              origin: new google.maps.Point(0, 0), // origin
-              anchor: new google.maps.Point(25, 25), // anchor
-
-          };
-
-
-          MyMarker = new google.maps.Marker({
-              position: myLatLng,
-              map: gmap,
-              icon: myicon
-
-          });
-
-      }
-
-      //  mapTypeId: 'satellite',
-
-  </script>
+  <script src="js/maps.js"></script>
   <style>
 
     td {
